Frontend/CSS/Post.css
* {
    font-family: monospace;
    font-weight: bold;
}

body {
    background-size: cover;
    background-position: center;
    background: url("../Images/Background.jpeg");
    color: white;
}

.footer {
    margin-top: 380px;
    background-color: #333;
    color: #fff;
    padding: 20px;
    text-align: center;
}

.footer-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 1200px;
    margin: 0 auto;
    width: 90%;
}

.footer-links {
    list-style-type: none;
    margin: 0 10px;
    padding: 0;
}

.footer-links li {
    display: inline;
    margin-left: 20px;
}

.footer-links a {
    color: #fff;
    text-decoration: none;
}

.footer-links a:hover {
    text-decoration: underline;
}

